Fix Vercel deployment configuration
- Update vercel.json to use correct outputDirectory: 'build'
- Simplify configuration for Vite static build
- Remove unnecessary builds array configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
   "version": 2,
   "name": "piko-cafe-digital-menu",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
   "routes": [
     {
       "src": "/static/(.*)",
@@ -23,11 +16,5 @@
   "env": {
     "VITE_SUPABASE_URL": "@vite_supabase_url",
     "VITE_SUPABASE_ANON_KEY": "@vite_supabase_anon_key"
-  },
-  "build": {
-    "env": {
-      "VITE_SUPABASE_URL": "@vite_supabase_url",
-      "VITE_SUPABASE_ANON_KEY": "@vite_supabase_anon_key"
-    }
   }
 }
