Fix critical linting issues and ensure app builds successfully
- Fixed syntax errors in PikoLoader and PikoLogo components
- Resolved NodeJS type issues in PikoLogoBadge
- App builds successfully with no compilation errors
- All tests pass
- Note: Some linting warnings remain but do not affect functionality

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-hooks": "*",
     "eslint-plugin-react-refresh": "*",
     "globals": "*",
+    "gsap": "^3.13.0",
     "hono": "*",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
