--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react-responsive-masonry": "^2.6.0",
     "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -77,10 +78,10 @@
     "jsdom": "^23.0.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
-    "react-day-picker": "^9.11.1",
-    "react-hook-form": "^7.65.0",
-    "react-resizable-panels": "^3.0.6",
-    "recharts": "^3.3.0",
+    "react-day-picker": "^8.10.1",
+    "react-hook-form": "^7.55.0",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.2",
     "terser": "^5.44.0",
     "vaul": "^1.1.2",
     "vite": "6.3.5",
