--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/vite": "*",
+    "@tanstack/react-query": "^5.90.5",
+    "@types/react-dnd": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "@vitejs/plugin-react-swc": "*",
@@ -50,8 +52,8 @@
     "path": "*",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dnd": "*",
-    "react-dnd-html5-backend": "*",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-responsive-masonry": "*",
     "sonner": "^2.0.3",
