chore: configure ESLint Node env for configs; add Vitest smoke test; point type-check to src tsconfig; run lint:fix

--- a/env.example
+++ b/env.example
@@ -7,5 +7,8 @@ VITE_SUPABASE_URL=https://your-project-id.supabase.co
 # Your Supabase anonymous/public key
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
+# Server-side service role key (used by import scripts only; keep secret)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
 # Optional: For local development
 # VITE_APP_ENV=development
