--- a/package.json
+++ b/package.json
@@ -97,16 +97,17 @@
     "build:prod": "vite build --mode production",
     "build:free-plan": "npm run generate:static && vite build && echo '✅ Built for Supabase Free Plan (5GB/month limit)'",
     "generate:static": "node scripts/generate-static-menu.js",
-    "generate:static:watch": "nodemon scripts/generate-static-menu.js",
+    "export:menu": "node scripts/export-menu-to-csv.js",
     "free-plan:setup": "npm run generate:static && echo '🎉 Free Plan optimization complete!'",
     "free-plan:check": "node -e \"console.log('📊 Free Plan Status: 5GB/month egress limit\\n💰 Static menu reduces costs by 95%\\n📁 Generated files: public/static/menu.json')\"",
-    "import:menu": "node scripts/import-menu-data.js",
+    "import:menu": "node scripts/import-menu-data.mjs",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "lint:strict": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit -p src/tsconfig.json",
     "pre-commit": "lint-staged",
     "prepare": "husky install",
     "test": "vitest",
