Data sync and quality: match & upload category photos; verify CSV vs DB and fix discrepancies; add variants support end-to-end; switch logs to warn; tighten types; fix lint warnings; format supabase auth listener; scripts: update-category-photos, verify-and-fix-csv-data

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "*",
     "@tanstack/react-query": "^5.90.5",
     "@typescript-eslint/eslint-plugin": "*",
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "*",
     "dnd-core": "*",
+    "dotenv": "^17.2.3",
     "eslint-plugin-react-hooks": "*",
     "eslint-plugin-react-refresh": "*",
     "form-data": "^4.0.4",
@@ -58,6 +59,7 @@
     "react-responsive-masonry": "*",
     "sonner": "^2.0.3",
     "tailwind-merge": "*",
+    "uuid": "^13.0.0",
     "vite": "*"
   },
   "devDependencies": {
@@ -94,12 +96,13 @@
     "dev": "vite",
     "build": "vite build",
     "build:prod": "vite build --mode production",
-    "build:free-plan": "npm run generate:static && vite build && echo '✅ Built for Supabase Free Plan (5GB/month limit)'",
     "generate:static": "node scripts/generate-static-menu.js",
     "export:menu": "node scripts/export-menu-to-csv.js",
     "free-plan:setup": "npm run generate:static && echo '🎉 Free Plan optimization complete!'",
     "free-plan:check": "node -e \"console.log('📊 Free Plan Status: 5GB/month egress limit\\n💰 Static menu reduces costs by 95%\\n📁 Generated files: public/static/menu.json')\"",
     "import:menu": "node scripts/import-menu-data.mjs",
+    "import:supabase": "node import-menu-to-supabase.js",
+    "upsert:menu": "node scripts/upsert-menu-data.mjs",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:strict": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
