fix: add static file routes to vercel.json for proper menu.json serving

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,13 @@
   "outputDirectory": "dist",
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=86400, s-maxage=86400"
+      }
+    },
+    {
       "src": "/assets/(.*\\.js)$",
       "dest": "/assets/$1",
       "headers": {
